external-crates/move/crates/move-compiler/tests/move_check/parser/spec_parsing_quantifier_fail.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
assertion_line: 277
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/spec_parsing_quantifier_fail.move:2:5
  │
2 │     spec module {
  │     ^^^^
  │     │
  │     Unexpected 'spec'
  │     Expected a module member: 'use', 'friend', 'const', 'fun', or 'struct'

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/spec_parsing_quantifier_fail.move:2:17
  │
2 │     spec module {
  │                 ^
  │                 │
  │                 Unexpected '{'
  │                 Expected an address or an identifier
