external-crates/move/crates/move-compiler/tests/move_check/parser/spec_parsing_quantifier_fail.move
module 0x42::M {
    spec module {
        invariant forall x: num y: num : x == y;
    }
}
